# airbyte-source-wave-pro

./: .dockerignore  .gitignore  Dockerfile  README.md  acceptance-test-config.yml  main.py  metadata.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
YOUR_PACKAGE/: __init__.py  run.py  source.py  spec.yaml
YOUR_PACKAGE/schemas/: estimated_cost.json
integration_tests/: abnormal_state.json  expected_records.jsonl
integration_tests/catalogs/: aws_costs.json  azure.costs.json  estimated_cost_stream.json  gcp_costs.json
unit_tests/: test_incremental_streams.py  test_source.py  test_spec.py  test_streams.py
